menyelesaikan main untuk desktop

--- a/index.html
+++ b/index.html
@@ -76,8 +76,45 @@
         <p>Why Fiber?</p>
         <h1>Why good porfolio means good employability.</h1>
       </div>
-      <div class="section-2"></div>
-      <div class="section-3"></div>
+      <div class="section-2">
+        <div class="card1">
+          <img src="assets/time.svg" alt="time" />
+          <p class="hitam">Build in minutes</p>
+          <p>
+            With a selection of premade templates, you can build out a porfolio
+            in less than 10 minutes.
+          </p>
+        </div>
+        <div class="card2">
+          <img src="assets/code.svg" alt="code" />
+          <p class="hitam">Add custom CSS</p>
+          <p>
+            Customize your personal even more with the ability to add your own
+            custom CSS style.
+          </p>
+        </div>
+        <div class="card3">
+          <img src="assets/allSizes.svg" alt="responsive" />
+          <p class="hitam">Responsive</p>
+          <p>
+            All Fiber templates are fully responsive to ensure the experience is
+            seemless across all devices.
+          </p>
+        </div>
+      </div>
+      <div class="section-3">
+        <div class="left">
+          <h1>Diversivy your porfolio.</h1>
+          <p>
+            Create an even more impressive porfolio by creating case studies for
+            your project. simply follow our step-by-step guide.
+          </p>
+          <button type="submit" class="btn-white">Start Free Trial</button>
+        </div>
+        <div class="right">
+          <img src="assets/Page Image.png" alt="page image" />
+        </div>
+      </div>
     </main>
     <script src="js/all.js"></script>
     <script src="js/bootstrap.min.js"></script>
