mengetik sampai footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,94 @@
         </div>
       </div>
     </main>
+
+    <!-- content -->
+    <section>
+      <div class="card-1">
+        <div class="avatar-1">
+          <img src="assets/User Avatar.svg" alt="avatar1" />
+          <p class="blue">Sarah Andrews</p>
+          <p>$100k in revenue</p>
+        </div>
+        <p>
+          Setting up my porfolio with Fiber took no more than 10 minutes. since
+          then, my porfolio has attracted a lot of clients and made me more than
+          $100k.
+        </p>
+        <button class="btn-card">View Sarah's Portfolio</button>
+      </div>
+      <div class="card-2">
+        <div class="avatar2">
+          <img src="assets/User Avatar 2.svg" alt="avatar2" />
+          <p class="blue">Mathew Higgins</p>
+          <p>$20k in revenue</p>
+        </div>
+        <p>
+          I have been getting A LOT of leads ever since I Used Fiber's premade
+          templates, now I just need to work on my case studies and I'll be
+          ready to go!
+        </p>
+        <button class="btn-card">View Mathew's Portfolio</button>
+      </div>
+      <div class="card-3">
+        <div class="avatar3">
+          <img src="assets/User Avatar 32.svg" alt="avatar3" />
+          <p class="blue">Janice Dave</p>
+          <p>$30k in revenue</p>
+        </div>
+        <p>
+          I only just started freelancing this year and I have already made more
+          than I ever made in my full-time job. The template are just so
+          amazing.
+        </p>
+        <button class="btn-card">View Janice's Portfolio</button>
+      </div>
+    </section>
+    <footer>
+      <div class="row">
+        <div class="col-md-4">
+          <span>Fiber</span>
+          <p>
+            With Fiber, you can setup your own personal porfolio in minutes with
+            dozens of premade, beautiful templates.
+          </p>
+          <p class="foot">Made with in the Netherlands.</p>
+        </div>
+        <div class="col-md-2">
+          <span>Sitemap</span>
+          <ul>
+            <li><a href="#">Homepage</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Testimonial</a></li>
+            <li><a href="#">Features</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <span>Resources</span>
+          <ul>
+            <li><a href="#">Suport</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <span>Company</span>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <span>Portfolios</span>
+          <ul>
+            <li><a href="#">Sarah Andrews</a></li>
+            <li><a href="#">Mathew Higgins</a></li>
+            <li><a href="#">Janice Dave</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script>
       const toggleButton = document.getElementsByClassName("toggle-button")[0];
       const navLink = document.getElementsByClassName("navlink")[0];
