--- a/index.html
+++ b/index.html
@@ -121,9 +121,13 @@
     <section>
       <div class="card-1">
         <div class="avatar-1">
-          <img src="assets/User Avatar.svg" alt="avatar1" />
-          <p class="blue">Sarah Andrews</p>
-          <p>$100k in revenue</p>
+          <div>
+            <img src="assets/User Avatar.svg" alt="avatar1" />
+          </div>
+          <div class="name">
+            <h6 class="blue">Sarah Andrews</h6>
+            <p>$100k in revenue</p>
+          </div>
         </div>
         <p>
           Setting up my porfolio with Fiber took no more than 10 minutes. since
@@ -133,10 +137,14 @@
         <button class="btn-card">View Sarah's Portfolio</button>
       </div>
       <div class="card-2">
-        <div class="avatar2">
-          <img src="assets/User Avatar 2.svg" alt="avatar2" />
-          <p class="blue">Mathew Higgins</p>
-          <p>$20k in revenue</p>
+        <div class="avatar-2">
+          <div>
+            <img src="assets/User Avatar 2.svg" alt="avatar2" />
+          </div>
+          <div class="name">
+            <h6 class="blue">Mathew Higgins</h6>
+            <p>$20k in revenue</p>
+          </div>
         </div>
         <p>
           I have been getting A LOT of leads ever since I Used Fiber's premade
@@ -146,10 +154,14 @@
         <button class="btn-card">View Mathew's Portfolio</button>
       </div>
       <div class="card-3">
-        <div class="avatar3">
-          <img src="assets/User Avatar 32.svg" alt="avatar3" />
-          <p class="blue">Janice Dave</p>
-          <p>$30k in revenue</p>
+        <div class="avatar-3">
+          <div>
+            <img src="assets/User Avatar 32.svg" alt="avatar3" />
+          </div>
+          <div class="name">
+            <h6 class="blue">Janice Dave</h6>
+            <p>$30k in revenue</p>
+          </div>
         </div>
         <p>
           I only just started freelancing this year and I have already made more
@@ -159,8 +171,10 @@
         <button class="btn-card">View Janice's Portfolio</button>
       </div>
     </section>
+    <!-- SECTION END -->
+    <!-- footer -->
     <footer>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-md-4">
           <span>Fiber</span>
           <p>
@@ -169,7 +183,7 @@
           </p>
           <p class="foot">Made with in the Netherlands.</p>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 satu">
           <span>Sitemap</span>
           <ul>
             <li><a href="#">Homepage</a></li>
@@ -178,7 +192,7 @@
             <li><a href="#">Features</a></li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 dua">
           <span>Resources</span>
           <ul>
             <li><a href="#">Suport</a></li>
@@ -186,7 +200,7 @@
             <li><a href="#">FAQ</a></li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 tiga">
           <span>Company</span>
           <ul>
             <li><a href="#">About</a></li>
@@ -194,7 +208,7 @@
             <li><a href="#">Blog</a></li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 empat">
           <span>Portfolios</span>
           <ul>
             <li><a href="#">Sarah Andrews</a></li>
